# Gateway/docs/swagger.yaml
@@ -28,13 +28,12 @@ definitions:
       surname:
         type: string
     type: object
-host: localhost:8083
 info:
   contact:
     email: support@swagger.io
     name: API Support
     url: http://www.swagger.io/support
-  description: Симакин К.С. Акчурин А.Р. Gateway
+  description: Gateway
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
@@ -435,7 +434,8 @@ paths:
       tags:
       - Пользователи
     post:
-      description: Добавляет в список пользователей нового
+      description: Добавляет пользователя от имени авторизованного пользователя. Для
+        публичной регистрации используйте /register.
       parameters:
       - description: Имя
         in: formData
@@ -478,6 +478,8 @@ paths:
           description: Неподдерживаемые данные
           schema:
             $ref: '#/definitions/main.Error'
+      security:
+      - BearerAuth: []
       summary: Добавить нового пользователя
       tags:
       - Пользователи
@@ -533,6 +535,55 @@ paths:
           schema:
             $ref: '#/definitions/main.Error'
       summary: Залогиниться
+      tags:
+      - Аутентификация
+  /register:
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: Создаёт нового пользователя без JWT. После регистрации получите
+        токен через /login.
+      parameters:
+      - description: Имя
+        in: formData
+        name: Name
+        required: true
+        type: string
+      - description: Фамилия
+        in: formData
+        name: Surname
+        required: true
+        type: string
+      - description: Логин
+        in: formData
+        name: login
+        required: true
+        type: string
+      - description: Возраст
+        in: formData
+        name: Age
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Идентификатор созданного пользователя
+          schema:
+            type: string
+        "400":
+          description: Ошибки в передаваемых параметрах
+          schema:
+            $ref: '#/definitions/main.Error'
+        "405":
+          description: Неверный метод
+          schema:
+            $ref: '#/definitions/main.Error'
+        "422":
+          description: Не удалось создать пользователя
+          schema:
+            $ref: '#/definitions/main.Error'
+      summary: Зарегистрировать пользователя
       tags:
       - Аутентификация
 securityDefinitions:
